# headway

./: .coderabbit.yaml  .env.template  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.bedrock-native  Dockerfile.headroom-bundled  LICENSE  README.md  SECURITY.md  docker-compose.yml  headroom-proxy  headway  install.sh  litellm_config.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: automerge-chore.yml  ci.yml  docker-bedrock-native.yml  docker-headroom-bundled.yml  stale-chore.yml  sync-dashboard.yml  sync-upstream-headroom.yml  sync-upstream-patch-compat.yml
docs/adr/: 0001-remove-litellm-sidecar.md  README.md
scripts/: _generate_config.py  auth-fix.sh  combined_stats.py  generate-litellm-config.sh  headroom_python.py  oneshot.sh  secret-scan.sh  setup-kilo.sh  start.sh  stats.sh  status.sh  stop.sh  test.sh  uninstall.sh  update.sh
scripts/cli/: generate-litellm-config.sh  headroom_python.py  headway-completion.bash  headway-e2e-test.sh  headway-unit-test.sh  secret-scan.sh  test-rust-stats.sh  test.sh
scripts/docker/: patch_headroom_upstream.py
scripts/headroom_patch/: dashboard.html  headroom-entrypoint.py  headroom-entrypoint.sh  usercustomize.py
scripts/headroom_patch/headroom_patch/: unified_stats_patch.py
scripts/runtime/headroom/: dashboard.html  headroom-entrypoint.py  headroom-entrypoint.sh  sync_dashboard.py  usercustomize.py
scripts/runtime/headroom/headroom_patch/: __init__.py  bedrock_native_patch.py  unified_stats_patch.py
