[project]
name = "headway"
version = "0.1.0"
description = "Local AI gateway for Kilo, built on Headroom and LiteLLM."
requires-python = ">=3.11"
dependencies = []

[project.urls]
Headroom = "https://github.com/chopratejas/headroom"
LiteLLM = "https://github.com/BerriAI/litellm"
Repository = "https://github.com/ysheikh2/headway"

[dependency-groups]
dev = [
    "ty>=0.0.49",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.11"
